# Electromics-project

./: .gitignore  README.md  extract_faa.sh  pyproject.toml
content/atlas-electromic/: README.md  config.yaml  samples.tsv
content/licenses/: gurobi.lic
content/other/: Histogram of MAG Completeness.ipynb
content/samples_info/: 20250311_Metadata_LR.csv  20250416_Resume_etude_taxo.pptx  20250417_Info_samples_metabolic_RIGAUD.pptx  20250603_Metadata_LR.xlsx  Metadata_Ech_Metagenomics.csv
content/thermo_gapfill/: Kleerebezem_2010_thermo_states_analysis_env_syst.xls
notebooks/: 2.reconstructingDraftGSMMs.ipynb  3.gapfillingGSMMs.ipynb  4.DNNGIORtraining.ipynb  5.computationalMethods.ipynb  ANI_analysis.ipynb  Family-Level MAG Composition.R  Metabolic_lu.ipynb  build_draft_model.ipynb  data_analysis.ipynb  down_public_genome.ipynb  env_ball_sampling.ipynb  fix_reaction.ipynb  simulation_result.pickle  target_product_fluxes.csv  test_simulation_result.pickle  tree_plot.R
notebooks/R/: genome_analysis.R
notebooks/env_ball_sampling/: Biomass_EN.ipynb  Biomass_NN.ipynb  simulates.ipynb  (+3 more)
results/: Butyrate_(mg_L)_correlation.csv  Propionate_(mg_L)_correlation.csv  ani_20_clusters.csv  blocked_butyrate.csv  blocked_propionate.csv  fastani_output.txt  gapfill_summary_butyrate_rxn00875.csv  prop_gapfill_summary.csv
scripts/: download_from_migale.sh  download_from_server.sh  run_fastANI.sh  upload_to_migale.sh
src/: build_draft_model.py  fix_reaction.py  graph_analysis.py
test/: create_gurobi_license.py  test.ipynb  test_cobra.py  test_dnngior.py  test_guroby.py
(+65 files in other folders)
