[project]
name = "electromics-project"
version = "0.1.0"
description = ""
authors = [
    {name = "wenbo"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "dnngior @ file:///Users/azddza/Electromics-project/external/dnngior",
    "gurobipy (>=10.0.1,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
