[tool.poetry]
name = "electromics-project"
version = "0.1.0"
description = ""
authors = ["wenbo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26"
matplotlib = ">=3.10.1,<4.0.0"
gurobipy = ">=10.0.1,<11.0.0"
python-libsbml = "==5.19.7"
cobra = "^0.29.0"
dnngior = { path = "external/dnngior" }
tensorflow = "^2.19.0"

#[tool.poetry.group.modelbuild.dependencies]
pandas = "^2.2.2"
modelseedpy = {path = "external/ModelSEEDpy"}
jax = "^0.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



